# android_env

./: .bazelignore  .bazelrc  BUILD.bazel  MODULE.bazel  README.md  protoc_runner.py  py_grpc_library.bzl  pyproject.toml  requirements.txt
.github/workflows/: release.yml  tests.yml
android_env/: BUILD.bazel  environment.py  loader.py  loader_test.py
android_env/apps/: README.md
android_env/components/: BUILD.bazel  adb_controller.py  adb_controller_test.py  config_classes.py  coordinator.py  coordinator_test.py  fake_log_stream.py  logcat_thread.py  logcat_thread_test.py  specs.py  task_manager.py  task_manager_test.py
android_env/components/simulators/: BUILD.bazel  base_simulator.py
android_env/components/simulators/emulator/: BUILD.bazel  emulator_launcher.py  emulator_simulator.py  emulator_simulator_test.py  tcp_ports.py  tcp_ports_test.py
android_env/components/simulators/fake/: BUILD.bazel
android_env/proto/: BUILD.bazel
android_env/proto/a11y/: BUILD.bazel
android_env/wrappers/: BUILD.bazel  a11y_grpc_wrapper.py  a11y_grpc_wrapper_test.py  gym_wrapper.py  gym_wrapper_test.py
android_env/wrappers/a11y/: BUILD.bazel
