[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "android-env"
version = "1.3.0"
description = "AndroidEnv environment and library for training agents."
authors = [{name = "DeepMind"}]
license = {file = "LICENSE"}
readme = {text = "Read the README at https://github.com/deepmind/android_env for more information.", content-type = "text/plain"}
keywords = ["Android", "OS", "reinforcement-learning"]
requires-python = ">=3.10"
dependencies = [
    "absl-py>=2.1.0",
    "dm_env>=1.6",
    "grpcio>=1.70.0",
    "numpy>=2.1.0",
    "portpicker>=1.6.0",
    "protobuf>=6,<8",
    "pygame>=2.6.0",
    "pillow>=10.4.0",
]

[project.optional-dependencies]
testing = [
    "gymnasium",
    "pytype",
]
acme = ["dm-acme"]
gym = ["gymnasium"]

[project.urls]
repository = "https://github.com/deepmind/android_env"
deepmind = "https://www.deepmind.com/publications/androidenv-the-android-learning-environment"
arxiv = "https://arxiv.org/abs/2105.13231"
