load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc_python//:defs.bzl", "python_grpc_library")
load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "adb_proto",
    srcs = ["adb.proto"],
)

proto_library(
    name = "emulator_controller_proto",
    srcs = ["emulator_controller.proto"],
    deps = ["@protobuf//:empty_proto"],
)

proto_library(
    name = "snapshot_proto",
    srcs = ["snapshot.proto"],
)

proto_library(
    name = "snapshot_service_proto",
    srcs = ["snapshot_service.proto"],
    deps = [
        ":snapshot_proto",
        "@protobuf//:empty_proto",
    ],
)

proto_library(
    name = "task_proto",
    srcs = ["task.proto"],
    deps = [":adb_proto"],
)

proto_library(
    name = "state_proto",
    srcs = ["state.proto"],
)

python_grpc_library(
    name = "all_protos_and_grpc",
    protos = [
        ":adb_proto",
        ":emulator_controller_proto",
        ":snapshot_proto",
        ":snapshot_service_proto",
        ":state_proto",
        ":task_proto",
    ],
)

py_library(
    name = "adb_py_pb2",
    deps = [":all_protos_and_grpc"],
)

py_library(
    name = "emulator_controller_py_pb2_grpc",
    deps = [":all_protos_and_grpc"],
)

py_library(
    name = "emulator_controller_py_pb2",
    deps = [":all_protos_and_grpc"],
)

py_library(
    name = "snapshot_service_py_pb2_grpc",
    deps = [":all_protos_and_grpc"],
)

py_library(
    name = "snapshot_service_py_pb2",
    deps = [":all_protos_and_grpc"],
)

py_library(
    name = "task_py_pb2",
    deps = [":all_protos_and_grpc"],
)

py_library(
    name = "state_py_pb2",
    deps = [":all_protos_and_grpc"],
)
