load("@rules_proto//proto:defs.bzl", "proto_library")
load("//:py_grpc_library.bzl", "py_grpc_library", "py_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "a11y_proto",
    srcs = ["a11y.proto"],
    deps = [
        ":android_accessibility_forest_proto",
    ],
)

py_proto_library(
    name = "a11y_py_pb2",
    srcs = ["a11y.proto"],
    proto_srcs = [
        "android_accessibility_action.proto",
        "android_accessibility_forest.proto",
        "android_accessibility_node_info.proto",
        "android_accessibility_node_info_clickable_span.proto",
        "android_accessibility_tree.proto",
        "android_accessibility_window_info.proto",
        "rect.proto",
    ],
    deps = [":android_accessibility_forest_py_pb2"],
)

py_grpc_library(
    name = "a11y_py_pb2_grpc",
    srcs = ["a11y.proto"],
    proto_srcs = [
        "android_accessibility_action.proto",
        "android_accessibility_forest.proto",
        "android_accessibility_node_info.proto",
        "android_accessibility_node_info_clickable_span.proto",
        "android_accessibility_tree.proto",
        "android_accessibility_window_info.proto",
        "rect.proto",
    ],
    deps = [":a11y_py_pb2"],
)

proto_library(
    name = "android_accessibility_action_proto",
    srcs = ["android_accessibility_action.proto"],
)

py_proto_library(
    name = "android_accessibility_action_py_pb2",
    srcs = ["android_accessibility_action.proto"],
)

proto_library(
    name = "android_accessibility_forest_proto",
    srcs = ["android_accessibility_forest.proto"],
    deps = [
        ":android_accessibility_window_info_proto",
    ],
)

py_proto_library(
    name = "android_accessibility_forest_py_pb2",
    srcs = ["android_accessibility_forest.proto"],
    proto_srcs = [
        "android_accessibility_action.proto",
        "android_accessibility_node_info.proto",
        "android_accessibility_node_info_clickable_span.proto",
        "android_accessibility_tree.proto",
        "android_accessibility_window_info.proto",
        "rect.proto",
    ],
    deps = [":android_accessibility_window_info_py_pb2"],
)

proto_library(
    name = "android_accessibility_node_info_proto",
    srcs = ["android_accessibility_node_info.proto"],
    deps = [
        ":android_accessibility_action_proto",
        ":android_accessibility_node_info_clickable_span_proto",
        ":rect_proto",
    ],
)

py_proto_library(
    name = "android_accessibility_node_info_py_pb2",
    srcs = ["android_accessibility_node_info.proto"],
    proto_srcs = [
        "android_accessibility_action.proto",
        "android_accessibility_node_info_clickable_span.proto",
        "rect.proto",
    ],
    deps = [
        ":android_accessibility_action_py_pb2",
        ":android_accessibility_node_info_clickable_span_py_pb2",
        ":rect_py_pb2",
    ],
)

proto_library(
    name = "android_accessibility_node_info_clickable_span_proto",
    srcs = ["android_accessibility_node_info_clickable_span.proto"],
)

py_proto_library(
    name = "android_accessibility_node_info_clickable_span_py_pb2",
    srcs = ["android_accessibility_node_info_clickable_span.proto"],
)

proto_library(
    name = "android_accessibility_tree_proto",
    srcs = ["android_accessibility_tree.proto"],
    deps = [":android_accessibility_node_info_proto"],
)

py_proto_library(
    name = "android_accessibility_tree_py_pb2",
    srcs = ["android_accessibility_tree.proto"],
    proto_srcs = [
        "android_accessibility_action.proto",
        "android_accessibility_node_info.proto",
        "android_accessibility_node_info_clickable_span.proto",
        "rect.proto",
    ],
    deps = [":android_accessibility_node_info_py_pb2"],
)

proto_library(
    name = "android_accessibility_window_info_proto",
    srcs = ["android_accessibility_window_info.proto"],
    deps = [
        ":android_accessibility_tree_proto",
        ":rect_proto",
    ],
)

py_proto_library(
    name = "android_accessibility_window_info_py_pb2",
    srcs = ["android_accessibility_window_info.proto"],
    proto_srcs = [
        "android_accessibility_action.proto",
        "android_accessibility_node_info.proto",
        "android_accessibility_node_info_clickable_span.proto",
        "android_accessibility_tree.proto",
        "rect.proto",
    ],
    deps = [
        ":android_accessibility_tree_py_pb2",
        ":rect_py_pb2",
    ],
)

proto_library(
    name = "rect_proto",
    srcs = ["rect.proto"],
)

py_proto_library(
    name = "rect_py_pb2",
    srcs = ["rect.proto"],
)
